\name{NEWS}
\title{News for Package 'tm'}
\encoding{UTF-8}
\section{Changes in tm version 0.7-9}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Compilation fixes.
    }
  }
}
\section{Changes in tm version 0.7-8}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix invalid counting in \code{prevalent} \code{stemCompletion()}.
        Reported by Bernard Chang.
      \item \code{tm_index()} now interprets all non-\code{TRUE} logical values
        returned by the filter function as \code{FALSE}. This fixes corner cases
        where filter functions return \code{logical(0)} or \code{NA}. Reported
        by Tom Nicholls.
    }
  }
}
\section{Changes in tm version 0.7-6}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{TermDocumentMatrix.SimpleCorpus()} now also honors a
      logical \code{removePunctuation} control option (default: false).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Sync encoding fixes in \code{TermDocumentMatrix.SimpleCorpus()} with
        \code{Boost_tokenizer()}.
    }
  }
}
\section{Changes in tm version 0.7-5}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Handle \code{NA}s consistently in tokenizers.
    }
  }
}
\section{Changes in tm version 0.7-4}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Keep document names in \code{tm_map.SimpleCorpus()}.
      \item Fix encoding problems in \code{scan_tokenizer()} and
        \code{Boost_tokenizer()}.
    }
  }
}
\section{Changes in tm version 0.7-3}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{scan_tokenizer()} now works with character vectors and
        character strings.
      \item \code{removePunctuation()} now works again in \code{latin1} locales.
      \item Handle empty term-document matrices gracefully.
    }
  }
}
\section{Changes in tm version 0.7-2}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item \code{DataframeSource} now only processes data frames with the two